# Commander-API

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  README.md  build.py  exampleGenerator.py  interpreter.d  keywords.txt  library.properties  main.d
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_problem.md  feature_request.md
.github/workflows/: compile-examples.yml
Arduino/Advanced/: Advanced.ino
Arduino/Moderate/: Moderate.ino  interpreter.cpp
Arduino/Simple/: Simple.ino  interpreter.hpp
Doc/html/: _commander-_a_p_i_8cpp.html  _commander-_i_o_8hpp_source.html  _commander-_settings_8hpp.js  _commander-_settings_8hpp_source.html  annotated.html  annotated_dup.js  arduino__installation_8md.html  arduiono_installation.html  class_commander-members.html  class_commander.html  class_commander.js  classcommand_response.js  classes.html  dir_3a23695c6bd64e2aaf9fdc392e0e1df4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_78b01f221e5d69dbe1f7a50c401396d7.html  dir_bfccd401955b95cf8c75461437045ac0.html  dir_bfccd401955b95cf8c75461437045ac0.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  interpreter_8c.html  interpreter_8h.html  interpreter_8h_source.html  main_8c.html  main__page_8md.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  struct_a_p_i__t.html  struct_a_p_i__t.js  struct_commander_1_1_a_p_i__t.js  usage__with__arduino_8md.html  (+1 more)
Doc/images/: response_function_explained_01.graphml
Doc/markdown_pages/: arduino_installation.md  main_page.md  usage_with_arduino.md
docs/: CNAME
docs/Style/: header.html  layout.xml
docs/html/: Argumentbasic.html  Argumentbasic.js  Argumentbasic.wasm  Basic.html  Basic.js  Description.html  Description.wasm  Help.html  Help.js  Interactive.html  Interactive.js  _commander-_a_p_i-_analog-_i_o-_commands_8cpp.html  _commander-_a_p_i-_analog-_i_o-_commands_8cpp.js  _commander-_a_p_i-_analog-_i_o-_commands_8cpp_a040fe7020c8c586e4e3be14f8eac7437_cgraph.md5  _commander-_a_p_i-_analog-_i_o-_commands_8cpp_a0bb64a637cbaa4134e0cc9d1a7453ecf_cgraph.md5  _commander-_a_p_i-_analog-_i_o-_commands_8cpp_a22f364acaf405f853e1ff3787c35b53e_cgraph.md5  _commander-_a_p_i-_analog-_i_o-_commands_8cpp_source.html  _commander-_a_p_i-_commands_8cpp.html  _commander-_a_p_i-_commands_8cpp.js  _commander-_a_p_i-_commands_8cpp_a345e11c841af12f6c9e5bc493466bbd7_cgraph.map  _commander-_a_p_i-_commands_8cpp_a6df16c4b3429cad40911ef08ed94f45f_cgraph.md5  _commander-_a_p_i-_commands_8cpp_source.html  _commander-_a_p_i-_commands_8hpp.html  _commander-_a_p_i-_commands_8hpp.js  _commander-_a_p_i-_commands_8hpp_a0bb64a637cbaa4134e0cc9d1a7453ecf_cgraph.map  _commander-_a_p_i-_commands_8hpp_a0bb64a637cbaa4134e0cc9d1a7453ecf_cgraph.md5  _commander-_a_p_i-_commands_8hpp_a1113369ca4b669dc0c6355fcf126cc42_cgraph.map  _commander-_a_p_i-_commands_8hpp_a1113369ca4b669dc0c6355fcf126cc42_cgraph.md5  _commander-_a_p_i-_commands_8hpp_a22f364acaf405f853e1ff3787c35b53e_cgraph.map  _commander-_a_p_i-_commands_8hpp_a2d1835760957b536f6d3aadf02109eaf_cgraph.md5  _commander-_a_p_i-_commands_8hpp_a458aacbc1ec8f7887519596521934f42_cgraph.md5  _commander-_a_p_i-_commands_8hpp_a46bd1d76491da10188a751a885069fef_cgraph.map  _commander-_a_p_i-_commands_8hpp_a5c9542cd570d909676496bb437d824ea_cgraph.map  _commander-_a_p_i-_commands_8hpp_a5c9542cd570d909676496bb437d824ea_cgraph.md5  _commander-_a_p_i-_commands_8hpp_a67c664cbc5869ccf57996adeecbb6cd9_cgraph.md5  _commander-_a_p_i-_commands_8hpp_a97b609ad07bfd174ed3fb4bfe78b6c76_cgraph.md5  _commander-_a_p_i-_commands_8hpp_a9ab5698b019086fe8d2c3d06a3f917fb_cgraph.map  _commander-_a_p_i-_commands_8hpp_abfe392815068d05be5e099def983b5ec_cgraph.map  _commander-_a_p_i-_commands_8hpp_ac0009f7287654611dc82da625f2579a9_cgraph.md5  _commander-_a_p_i-_commands_8hpp_ae7d6fa81c7ec3354378b1f948c0c8749_cgraph.map  (+671 more)
docs/images/: arduino_install_lib_install.xcf  arduino_install_success.xcf  footer_image.xcf  github_gb.xcf
docs/markdown_pages/: api.md  arduino_installation.md  main_page.md  piping.md  platroemio_installation.md  premade_commands.md  supported.tgn  supported_platforms.md  user_settings.md
docs/webExamples/: Argumentbasic.html  Basic.html  Basic.wasm  Description.html  Description.js  Help.html  Help.wasm  Interactive.html  Interactive.wasm
examples/001_commander_basic/: 001_commander_basic.ino
examples/Commander_Shellminator_Advanced_Telnet_ESP32/: Commander_Shellminator_Advanced_Telnet_ESP32.ino
examples/Commander_Shellminator_Advanced_WebSocket_ESP32/: Commander_Shellminator_Advanced_WebSocket_ESP32.ino
examples/Commander_simple/: Commander_simple.ino
examples/Commander_simple_ESP32/: Commander_simple_ESP32.ino
examples/Commander_simple_ESP8266/: Commander_simple_ESP8266.ino
examples/Commander_simple_progmem/: Commander_simple_progmem.ino
examples/Commander_simple_stream_pipe/: Commander_simple_stream_pipe.ino
examples/Commander_simple_stream_pipe_ESP32/: Commander_simple_stream_pipe_ESP32.ino
extras/: emscripten_template_page.html
extras/Assets/: DoxygenLayout.xml  header.html  supported_boards.html
extras/example_database/: argumentAdvanced.example  argumentBasic.example  basic.example  blink.example  description.example  fullSystem.example  help.example  memory.example  (+2 more)
inc/: interpreter.h
src/: Commander-API-Analog-IO-Commands.cpp  Commander-API-Commands.cpp  Commander-API-Commands.hpp  Commander-API-Digital-IO-Commands.cpp  Commander-API-System-Commands.cpp  Commander-API.cpp  Commander-API.hpp  Commander-Arguments.cpp  Commander-Arguments.hpp  Commander-Autocomplete.cpp  Commander-Autocomplete.hpp  Commander-Caller-Interface.cpp  Commander-Caller-Interface.hpp  Commander-Database.hpp  Commander-DefaultSettings.hpp  Commander-IO.cpp  Commander-IO.hpp  Commander-Settings.hpp  Commander-Utils.cpp  Commander-Utils.hpp  commander.cpp  commander.hpp  commander_io.cpp  commander_io.hpp  commander_settings.hpp  interpreter.c  main.c
(+255 files in other folders)
